1014020 - Fog Linear test failed.
1014019 - Blend test failed.
1014018 - LogicOp Function test failed.
1014016 - Stencil Plane Operation test failed.
1014017 - Stencil Plane Function test failed.
1015029 - Linear fog efficiency
1008788	- Auto mipmap generation
1008786 - Buffer Objects
1012401 - Optimize SelectArrayElement
1008792 - Enhanced point sprites and point sprite arrays


Version 0.81
------------

This version adds the redbook examples that are distributed with the reference implementation. To
do so, a version of the ug library (the mini GLUT included in the reference implementation) has
been added.

In addition, a couple of defects that showed up in those examples have been addressed:

 863654 - Create specialized pipeline functions for geometry stage 
 960543 - BindTexture should record an error for invalid targets
1001348 - By default, smooth shading should be enabled
1001352 - movelight example is rendered incorrectly
1001351 - alpha3d example does not render correctly
1001354 - Stray red pixels in examples
1001356 - Polyoff example shows stippling
1008798 - Clipping issue invovling points at infinity
1001825 - Mesh created by ugWireSphere/ugSolidSphere is iffy
1001882	- eglGetError return value


Version 0.80
------------

This version constitutes a major milestone for Vincent. First of all, Vincent has become
feature complete and can pass the full OpenGL ES conformance test in internal runs. From this
point on, all releases of Vincent will be fully regression tested against the conformance
test.

Second, first steps towards support for Symbian has been added; specifically support for implementations
of Nokia's Series 60 platform. The implementations is not fully working yet, but at least will compile
without errors. If you are interested in completing this port, please contact the project administrator.

This version addresses the following issues:

980877 - Mipmaps Selection test failed.
980878 - Mipmaps Interpolation test failed.